# ball_collection-based-on-turtlebot

./: .gitignore  a_star.py  disable_shm.xml  fix.sh  fix_fake_success.py  frames_2026-05-23_22.46.33.gv  patch2.sh  patch_density_map.sh  run_headless.sh  run_sim.sh
turtlebot3/turtlebot3_ball_collection/: CMakeLists.txt  DATA_TRANSMISSION_LOGIC.md  PROJECT_COMPLETION_AUDIT.md  README.md  density_aware_astar_planner_plugin.xml  package.xml  patch_cpp.sh
turtlebot3/turtlebot3_ball_collection/behavior_trees/: mission_controller.xml  navigate_density_aware.xml
turtlebot3/turtlebot3_ball_collection/include/: density_aware_astar_planner.hpp  density_map_builder_node.hpp  mission_controller.hpp
turtlebot3/turtlebot3_ball_collection/launch/: ball_collection.launch.py  full_system.launch.py  slam_navigation.launch.py
turtlebot3/turtlebot3_ball_collection/param/: slam_toolbox.yaml
turtlebot3/turtlebot3_ball_collection/scripts/: ball_collector.py  mission_metrics.py
turtlebot3/turtlebot3_ball_collection/src/: density_aware_astar_planner.cpp  density_map_builder_node.cpp  mission_controller.cpp
turtlebot3/turtlebot3_navigation2/launch/: my_navigation_launch.py
turtlebot3/turtlebot3_navigation2/param/: waffle.yaml
turtlebot3/turtlebot3_navigation2/param/humble/: burger.yaml  burger_cam.yaml  waffle.yaml  waffle_pi.yaml
turtlebot3/turtlebot3_navigation2/rviz/: tb3_navigation2.rviz
turtlebot3/turtlebot3_vision/turtlebot3_vision/: yolo_detector_node.py
turtlebot3_simulations/turtlebot3_gazebo/launch/: spawn_turtlebot3.launch.py  turtlebot3_world.launch.py
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/scripts/: spawn_random_tennis_balls.py
turtlebot3_simulations/turtlebot3_gazebo/worlds/: tennis_court.world
